--- a/.config/swayimg/config
+++ b/.config/swayimg/config
@@ -77,7 +77,7 @@ shadow = #000000
 mode = off
 # Display scheme for the "full" mode: position = content
 #full.topleft = name,format,filesize,imagesize,exif
-fulll.topleft = none 
+full.topleft = none 
 full.topright = index
 full.bottomleft = scale,frame
 full.bottomright = status
